--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li> OOPS</li>
     </ol>
     <ul type="square">
-        <li> FEDE</li>
+        <li> fEDE</li>
         <li> AIML</li>
         <li> OOPS</li>
     </ul>
